# safe-shipping-area

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  record.sh  test_detection.py  tracker.py
tests/: check_cameras.py  test_detection.py
