[project]
name = "safe-shipping-area"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lap>=0.5.12",
    "onnx>=1.22.0",
    "onnxslim>=0.1.82",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "ultralytics>=8.4.75",
]
